Projet initialisé par Charlotte

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<div class="container-fluid">
+  <div class="home-heading text-center row">
+    <div class="home-heading-wrapper">
+      <h1>Let's start some kick-ass games</h1>
+      <p>Find people to play your favorite board games. Set a date, let people join, and FEU!</p>
+    </div>
+  </div>
+</div>
