log out and userloggedin done

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,3 +62,9 @@ nav.navbar {
 .home-heading-wrapper > p {
   font-size: 2rem;
 }
+
+.btn-logout {
+  color: black;
+  padding: 15px;
+  border: 0;
+}
