--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -38,8 +38,10 @@
                <span class="glyphicon glyphicon-search"></span>
              </a>
            </li>
+            <% if (!userSignedIn) { %>
             <li><a href="/login">Login</a></li>
             <li><a href="/signup">Signup</a></li>
+            <% } %>
            <li><a href="/games">Board Games</a></li>
            <li>
             <form action="/logout" method="POST">
