--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,3 +68,35 @@ nav.navbar {
   padding: 15px;
   border: 0;
 }
+
+/* public/stylesheets/style.css */
+.campaign-row {
+  margin-top: 3%;
+}
+
+.home-campaign-box {
+  border: 1px solid #d3d3d3;
+  height: 300px;
+  margin: 30px 4%;
+  padding: 0;
+}
+
+.home-campaign-box img {
+  width: 100%;
+  height: 45%;
+}
+
+.campaign-info-wrapper {
+  padding: 5px 7px;
+  font-size: 0.9em;
+}
+
+.campaign-info-wrapper > .description {
+  display: block;
+  margin-top: 20px;
+}
+
+.campaign-info-wrapper > .title {
+  color: black;
+  font-size: 1.1em;
+}
