--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,3 +6,19 @@
     </div>
   </div>
 </div>
+
+<div class="campaign-row row">
+    <h3 class="text-center">YOu can join one of these games</h3>
+    <% campaigns.forEach((game) => { %>
+      <div class="col-sm-3 home-campaign-box">
+        <img src="<%= campaign.image %>">
+        <div class="campaign-info-wrapper">
+          <a class="title" href="/campaigns/<%= campaign._id %>">
+            <strong><%= game.title %></strong>
+          </a><br>
+          by <span class="light-text"><%= game._creator.username %></span><br>
+          <span class="light-text description"><%= game.description %></span>
+        </div>
+      </div>
+    <%  }) %>
+  </div>
