routes/games get & post done

--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -4,7 +4,7 @@
       <form action="/new" method="post">
         <div class="form-group">
           <label for="title">Title</label>
-          <input type="text" name="email" class="form-control">
+          <input type="text" name="title" class="form-control">
         </div>
         <div class="form-group">
           <label for="game">Board Game</label>
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea type="password" name="password" class="form-control" rows="5"></textarea>
+          <textarea type="password" name="description" class="form-control" rows="5"></textarea>
         </div>
         <div class="form-group">
           <label for="adress">Adress</label>
@@ -26,7 +26,7 @@
         <div class="form-group">
           <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
           <div class="col-10">
-            <input class="form-control" type="datetime-local" value="2011-08-19T13:45:00" id="example-datetime-local-input">
+            <input class="form-control" type="datetime-local" name="time" value="2011-08-19T13:45:00" id="example-datetime-local-input">
           </div>
         </div>
         <div class="form-group">
