--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -48,7 +48,7 @@
              <button class="btn btn-link btn-logout" type="submit">Logout</a>
             </form>
            </li>
-           <li><a href="#">Profile</a></li>
+           <li><a href="/profile">Profile</a></li>
          </ul>
        </div>
      </div>
