--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,24 +7,30 @@
           <input type="text" name="username" class="form-control">
         </div>
         <div class="form-group">
-          <label for="description">Description</label>
-          <textarea type="text" name="description" class="form-control">
+          <label for="_boardGame">I own these boardgames</label>
+          <select multiple class="form-control" name="_boardGame" title="I own these boardgames">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+          </select>
         </div>
         <div class="form-group">
-          <label for="imgUrl">Password</label>
-          <input type="imgUrl" name="imgUrl" class="form-control">
+          <label for="type">I like these kind of games</label>
+          <select multiple class="form-control" name="type" title="I own these boardgames">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+          </select>
         </div>
         <div class="form-group">
-          <label for="_boardGame">I own these boardgames !</label>
-          <input type="_boardGame" name="_boardGame" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="type">I like to play these kinds of games...</label>
-          <input type="type" name="type" class="form-control">
+          <label for="description">Describe yourself in a few words</label>
+          <textarea type="text" name="description" class="form-control" rows="5"></textarea>
         </div>
 
-        <button type="submit">Signup</button>
+
+        <button type="submit">Create a game</button>
       </form>
     </div>
   </div>
+</div>
 </div>
