--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group">
           <label for="adress">Adress</label>
-          <input type="text" name="adress" class="form-control">
+          <input type="text" name="adress" class="form-control" id="pac-input">
         </div>
         <div class="form-group">
           <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
@@ -38,6 +38,9 @@
         <button type="submit">Create a game</button>
       </form>
     </div>
+    <div id="map"></div>
   </div>
 </div>
 </div>
+
+<script src="/javascripts/map.js"></script>
