--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
             <p class="card-text">
               <%= game.description %>
             </p>
-            <a href="#" class="btn btn-success">Go somewhere</a>
+            <a href="/games/<%= game._id %>" class="btn btn-success">Go somewhere</a>
           </div>
         </div>
       </div>
