post game with gmaps

--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -22,6 +22,8 @@
         <div class="form-group">
           <label for="adress">Adress</label>
           <input type="text" name="adress" class="form-control" id="pac-input">
+          <input type="text" name="lat" class="form-control hidden" id="lat-input">
+          <input type="text" name="lng" class="form-control hidden" id="lng-input">
         </div>
         <div class="form-group">
           <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
