--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,11 +109,11 @@ nav.navbar {
 }
 
 #map {
-  height: 50vh;;
+  height: 50vh;
+  ;
 }
 
 /* Optional: Makes the sample page fill the window. */
-
 
 .controls {
   margin-top: 10px;
@@ -126,3 +126,26 @@ nav.navbar {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
+/* CUSTOM CSS */
+
+.content {
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+}
+
+.heading {
+  padding-bottom: 15vh;
+}
+
+#demo,
+#form {
+  height: 100vh;
+  background-color: #E3ECFA;
+}
+
+#footer {
+  background-color: #232323;
+  color: #DDDDDD;
+  padding: 1vh;
+  line-height: 1vh;
+}
