--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -50,7 +50,7 @@
             </li>
             <% } %>
               <li>
-                <a href="/games">Board Games</a>
+                <a href="/board-games">Board Games</a>
               </li>
               <li>
                 <form action="/logout" method="POST">
