--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-
+<!-- Algolia -->
 <!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
 <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
