--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -23,7 +23,10 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-
+      <div class="logo">
+        
+        <a href="/"><img src="/images/logo.png" alt=""></a>
+      </div>
       <div class="collapse navbar-collapse" id="home-nav">
         <ul class="nav navbar-nav">
           <li>
@@ -31,7 +34,7 @@
           </li>
           <li class="nav-logo">
             <a href="/" class="nav-logo-link">
-              <img class="nav-logo-image" src="" alt="Game On Logo">
+              <!-- <img class="nav-logo-image" src="images/logo.png" alt="Game On Logo"> -->
             </a>
           </li>
         </ul>
@@ -53,9 +56,10 @@
                 <a href="/board-games">Board Games</a>
               </li>
               <li>
-                <form action="/logout" method="POST">
+                <!-- <form action="/logout" method="POST">
                   <button class="btn btn-link btn-logout" type="submit">Logout</a>
-                </form>
+                </form> -->
+                <a href="/logout">Logout</a>
               </li>
               <li>
                 <a href="/profile">Profile</a>
