ready to rumble

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,6 +179,11 @@ nav.navbar {
   text-align: center;
 }
 
+.bg-title {
+  white-space:nowrap;
+  font-size: 1.5rem
+}
+
 /* Algolia */
 
 .aa-input-container {
