--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ironfunding</title>
+  <title>Game-On</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -24,7 +24,7 @@
         </button>
       </div>
       <div class="logo">
-        
+
         <a href="/"><img src="/images/logo.png" alt=""></a>
       </div>
       <div class="collapse navbar-collapse" id="home-nav">
@@ -56,10 +56,10 @@
                 <a href="/board-games">Board Games</a>
               </li>
               <li>
-                <!-- <form action="/logout" method="POST">
+                <form action="/logout" method="POST">
                   <button class="btn btn-link btn-logout" type="submit">Logout</a>
-                </form> -->
-                <a href="/logout">Logout</a>
+                </form>
+                <!-- <a href="/logout">Logout</a> -->
               </li>
               <li>
                 <a href="/profile">Profile</a>
