--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
           <label for="game">Board Game</label><br>
-              <input type="text" class="form-control" id="inlineCheckbox1" placeholder="Your favorite board game">
+              <input type="text" class="form-control" name="boardgame" placeholder="Your favorite board game">
         </div>
         <div class="form-group">
           <label for="description">Description</label>
