final push with a lot of populates

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,9 +123,8 @@ nav.navbar {
   font-size: 1.1em;
 }
 
-#map {
+#map, #imap {
   height: 50vh;
-  ;
 }
 
 /* Optional: Makes the sample page fill the window. */
