--- a/views/games/view.ejs
+++ b/views/games/view.ejs
@@ -1,30 +1,81 @@
 <div class="container">
   <div class="row">
-    <div class="jumbotron">
+    <div class="col-lg-6">
+      <img src="<%= bginfos.img %>" alt="" style="height:250px">
       <h1>
         <%= game.title %>
       </h1>
-      <div id="map">
+      <h2>
+        <%= game.boardgame %>
+      </h2>
+    </div>
+    <div class="col-lg-6">
+      <img src="<%= game._creator.imgUrl %>">
+      <p>Hosted by :
 
+
+        <%= game._creator.username %>
+      </p>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <% if (userSignedIn) { %>
+          <form action="/games/<%= game._id %>/register" method="post">
+            <input type="submit" value="Join 'da game!" class="btn btn-primary">
+          </form>
+          <% } else { %>
+            <form action="/signup" method="post">
+              <input type="submit" value="Signup" class="btn btn-primary">
+            </form>
+            <% } %>
       </div>
-      <%= game.coordinates %>
-        <h2>
-          <%= game.adress %>
-        </h2>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
 
         <p>
-          <%= game.time %>
+          <i class="fa fa-child"></i><%=bginfos.age%>
         </p>
-        <h3>
-          <%= game.description %>
-        </h3>
-        <form action="/games/<%= game._id %>/register" method="post">
-          <input type="submit" value="S'inscrire" class="btn btn-primary">
-        </form>
+        <p>
+          <i class="fa fa-users"></i><%=bginfos.players%>
+        </p>
+        <p>
+          <span class="glyphicon glyphicon-time"></span><%=bginfos.time%>
+        </p>
+
+
+      </div>
     </div>
+
   </div>
+  <h2>
+    Description
+  </h2>
+  <p>
+    <%= game.description %>
+  </p>
+  <%= game.adress %>
+    <div id="map">
+
+    </div>
+    <div>
+
+
+      <p>
+        <%= game.time %>
+      </p>
+      <h3>
+
+      </h3>
+
+    </div>
+</div>
 </div>
 
+<pre>
+    <%- JSON.stringify(game, null, 2) -%>
+    <%- JSON.stringify(bginfos, null, 2) -%>
+</pre>
 <script>
   window.coor = <%- JSON.stringify(game.coordinates) -%>;
 </script>
