--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,22 @@
 <div class="container-fluid">
   <div class="home-heading text-center row">
     <div class="home-heading-wrapper">
-      <h1>Let's start some kick-ass games</h1>
+      <h1 class="">Let's start some kick-ass games</h1>
       <p>Find people to play your favorite board games. Set a date, let people join, and FEU!</p>
     </div>
   </div>
 </div>
 <div class="container-fluid">
   <div class="row">
-    <h2 class="text-center">Games</h2>
+    <h2 class="text-center underline">Games</h2>
     <!-- map -->
     <div class="col-lg-12">
       <div id="imap">
 
       </div>
+      <h3 class="text-center">
+        View details
+      </h3>
     </div>
     <!-- /map -->
     <!-- each game -->
