--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -87,8 +87,12 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="players">Players</label>
-          <input required="true" type="number" value="4" name="players" class="form-control">
+          <label for="players">Players Minimum</label>
+          <input required="true" type="number" value="1" name="playersmin" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="players">Players Maximum</label>
+          <input required="true" type="number" value="4" name="playersmax" class="form-control">
         </div>
         <button type="submit" class="btn btn-primary">Create a game</button>
       </form>
