--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,6 +62,12 @@
           <%= user.type %>
         </dd>
       </dl>
+      <div>
+        <p>I created these games</p>
+      </div>
+      <div>
+        <p>I joined these games</p> 
+      </div>
     </div>
   </div>
 </div>
