--- a/views/games/view.ejs
+++ b/views/games/view.ejs
@@ -27,6 +27,9 @@
             <form action="/signup" method="post">
               <input type="submit" value="Signup" class="btn btn-primary">
             </form>
+            <form action="/login" method="post">
+              <input type="submit" value="login" class="btn btn-secondary">
+            </form>
             <% } %>
       </div>
     </div>
